--- a/index.html
+++ b/index.html
@@ -2,9 +2,112 @@
 <html lang="en">
 	<head>
 		<title>Flightonight</title>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.css" type="text/css">
+		<link rel="stylesheet" href="resources/style.css" type="text/css">
 	</head>
 	<body>
-		<h1>Flightonight</h1>
-		<img src="resources/logo.png" alt="our logo" width="300px"/>
+		<div class="ui grid">
+			<div class="row"></div>
+			<div class="row"></div>
+			<div class="row">
+				<div class = "five wide column"></div>
+				<div class = "six wide column">
+					<h1 class="ui dividing header">Flightonight</h1>
+				</div>
+			</div>
+			<div class="row">
+				<div class = "six wide column"></div>
+				<div class= "three wide column">
+					<img src="resources/logo.png" alt="our logo"/>
+				</div>
+				<div class= "two wide column">
+					<select name="tripType" class="ui dropdown" id="select">
+					  <option value="round">RoundTrip</option>
+					  <option value="one">OneWay</option>
+					</select>
+				</div>
+			</div>
+			<div class="row">
+				<div class = "five wide column"></div>
+				<form class="ui form" action="index.html" method="post">
+					<h4 class="ui dividing header">Trip:</h4>
+					<label>Airport</label>
+					<div class="two fields">
+				      <div class="field">
+				        <input type="text" name="departureAirport" placeholder="From">
+				      </div>
+				      <div class="field">
+				        <input type="text" name="arrivalCity" placeholder="To">
+				      </div>
+				    </div>
+					<label>Departure Time</label>
+					<div class="three fields">
+						<div class="field">
+  			            <select class="ui fluid search dropdown" name="departure[month]">
+  			              <option value="">Month</option>
+  			              <option value="1">January</option>
+  			              <option value="2">February</option>
+  			              <option value="3">March</option>
+  			              <option value="4">April</option>
+  			              <option value="5">May</option>
+  			              <option value="6">June</option>
+  			              <option value="7">July</option>
+  			              <option value="8">August</option>
+  			              <option value="9">September</option>
+  			              <option value="10">October</option>
+  			              <option value="11">November</option>
+  			              <option value="12">December</option>
+  			            </select>
+  			          </div>
+					  <div class="field">
+						<input type="text" name="departure[day]" maxlength="2" placeholder="Day">
+					  </div>
+					<div class="field">
+					  <input type="text" name="departure[year]" maxlength="4" placeholder="Year">
+					</div>
+					<div class="field"></div>
+					</div>
+					<label>Return Time</label>
+					<div class="three fields">
+						<div class="field">
+  			            <select class="ui fluid search dropdown" name="departure[month]">
+  			              <option value="">Month</option>
+  			              <option value="1">January</option>
+  			              <option value="2">February</option>
+  			              <option value="3">March</option>
+  			              <option value="4">April</option>
+  			              <option value="5">May</option>
+  			              <option value="6">June</option>
+  			              <option value="7">July</option>
+  			              <option value="8">August</option>
+  			              <option value="9">September</option>
+  			              <option value="10">October</option>
+  			              <option value="11">November</option>
+  			              <option value="12">December</option>
+  			            </select>
+  			          </div>
+					  <div class="field">
+						<input type="text" name="departure[day]" maxlength="2" placeholder="Day">
+					  </div>
+					<div class="field">
+					  <input type="text" name="departure[year]" maxlength="4" placeholder="Year">
+					</div>
+					<div class="field"></div>
+					</div>
+					<div class="three fields">
+						<div class="field"></div>
+						<div class="field"></div>
+						<div class="field"></div>
+
+						<div class="ui submit button" tabindex="0">Submit</div>
+					</div>
+
+				</form>
+
+				</div> -->
+			</div>
+
+		</div>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.js"></script>
 	</body>
 </html>
