api data return to console, also add a sample json file which includes 1 possible route info, for the purpose of easy understanding

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 			</div>
 			<div class="row">
 				<div class = "five wide column"></div>
-				<form class="ui form" action="index.html" method="post" id = "info">
+				<form class="ui form" id = "info">
 					<h4 class="ui dividing header">Trip:</h4>
 					<label>Airport</label>
 					<div class="two fields">
@@ -99,7 +99,7 @@
 						<div class="field"></div>
 						<div class="field"></div>
 
-						<div class="ui submit button" tabindex="0">Submit</div>
+						<div class="ui button" tabindex="0" id = "sub">Submit</div>
 					</div>
 
 				</form>
