api, email, combine needed, and schedule function

--- a/public/index.html
+++ b/public/index.html
@@ -1,115 +1,162 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<title>Flightonight</title>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.css" type="text/css">
-	</head>
-	<body>
-		<div class="ui grid">
-			<div class="row"></div>
-			<div class="row"></div>
-			<div class="row">
-				<div class = "five wide column"></div>
-				<div class = "six wide column">
-					<h1 class="ui dividing header">Flightonight</h1>
-				</div>
-				<div class = "five wide column"></div>
-			</div>
-			<div class="row">
-				<div class = "six wide column"></div>
-				<div class= "three wide column">
-					<img src="resources/logo.png" alt="our logo"/>
-				</div>
-				<div class= "two wide column">
-					<select name="tripType" class="ui dropdown" id="select">
-					  <option value="round">RoundTrip</option>
-					  <option value="one">OneWay</option>
-					</select>
-				</div>
-			</div>
-			<div class="row">
-				<div class = "five wide column"></div>
-				<form class="ui form" id = "info">
-					<h4 class="ui dividing header">Trip:</h4>
-					<label>Airport</label>
-					<div class="two fields">
-				      <div class="field">
-				        <input type="text" name="departureAirport" placeholder="Origin" id = "origin">
-				      </div>
-				      <div class="field">
-				        <input type="text" name="arrivalAirport" placeholder="Destination" id = "destination">
-				      </div>
-				    </div>
-					<label>Departure Time</label>
-					<div class="three fields">
-						<div class="field">
-  			            <select class="ui fluid search dropdown" name="departure[month]" id = "dpMonth">
-  			              <option value="">Month</option>
-  			              <option value="1">January</option>
-  			              <option value="2">February</option>
-  			              <option value="3">March</option>
-  			              <option value="4">April</option>
-  			              <option value="5">May</option>
-  			              <option value="6">June</option>
-  			              <option value="7">July</option>
-  			              <option value="8">August</option>
-  			              <option value="9">September</option>
-  			              <option value="10">October</option>
-  			              <option value="11">November</option>
-  			              <option value="12">December</option>
-  			            </select>
-  			          </div>
-					  <div class="field">
-						<input type="text" name="departure[day]" maxlength="2" placeholder="Day" id = "dpDay">
-					  </div>
-					<div class="field">
-					  <input type="text" name="departure[year]" maxlength="4" placeholder="Year" id = "dpYear">
-					</div>
-					<div class="field"></div>
-					</div>
-					<label>Return Time</label>
-					<div class="three fields">
-						<div class="field">
-  			            <select class="ui fluid search dropdown" name="departure[month]">
-  			              <option value="">Month</option>
-  			              <option value="1">January</option>
-  			              <option value="2">February</option>
-  			              <option value="3">March</option>
-  			              <option value="4">April</option>
-  			              <option value="5">May</option>
-  			              <option value="6">June</option>
-  			              <option value="7">July</option>
-  			              <option value="8">August</option>
-  			              <option value="9">September</option>
-  			              <option value="10">October</option>
-  			              <option value="11">November</option>
-  			              <option value="12">December</option>
-  			            </select>
-  			          </div>
-					  <div class="field">
-						<input type="text" name="departure[day]" maxlength="2" placeholder="Day">
-					  </div>
-					<div class="field">
-					  <input type="text" name="departure[year]" maxlength="4" placeholder="Year">
-					</div>
-					<div class="field"></div>
-					</div>
-					<div class="three fields">
-						<div class="field"></div>
-						<div class="field"></div>
-						<div class="field"></div>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Flightonight</title>
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.css">
+        <link rel='stylesheet' media='screen and (max-width: 1150px)' href='resources/narrow.css' />
+        <link rel='stylesheet' media='screen and (min-width: 1151px)' href='resources/wide.css' />
+    </head>
+    <body>
+        <div id="container">
+            <img class="ui small circular image" src="resources/ft.jpg" alt="ourlogo" id = "logo">
+            <h1>Flightonight</h1>
+            <h1><a class="ui blue image label" href="https://github.com/yanx611/Flightonight" id="link" target="_blank">
+              <i class="github icon"></i>
+              Flightonight
+            </a></h1>
+            <div class="ui divider"></div>
+            <form class="ui form" action="" method="post">
+                <div class="three fields">
+                    <div class="field">
+                        <input type="text" placeholder="Origin" name="origin" id="origin">
+                    </div>
+                    <div class="field">
+                        <input type="text" placeholder="Destination" name="destination" id="des">
+                    </div>
+                    <div class="field">
+                        <div class="ui left pointing label">
+                            Please enter the airport code (e.g ALB)
+                        </div>
+                    </div>
+                </div>
+                <div class="ui divider"></div>
+                <div class="ui pointing below label">
+                  Departure Time
+                </div>
+                <div class="four fields">
+                    <div class="field">
+                    <select class="ui fluid search dropdown" name="departure[month]" id = "dpMonth">
+                      <option value="" disabled selected>Month</option>
+                      <option value="1">January</option>
+                      <option value="2">February</option>
+                      <option value="3">March</option>
+                      <option value="4">April</option>
+                      <option value="5">May</option>
+                      <option value="6">June</option>
+                      <option value="7">July</option>
+                      <option value="8">August</option>
+                      <option value="9">September</option>
+                      <option value="10">October</option>
+                      <option value="11">November</option>
+                      <option value="12">December</option>
+                    </select>
+                  </div>
+                  <div class="field">
+                    <input type="text" name="departure[day]" maxlength="2" placeholder="Day" id = "dpDay">
+                  </div>
+                <div class="field">
+                  <input type="text" name="departure[year]" maxlength="4" placeholder="Year" id = "dpYear">
+                </div>
+                <div class="field">
+                    <div class="ui left pointing label">
+                        Date format DD <br \>
+                        Year format YYYY
+                    </div>
+                </div>
+                </div>
 
-						<div class="ui button" tabindex="0" id = "sub">Submit</div>
-					</div>
+                <div class="ui pointing below label">
+                  Return Time
+                </div>
+                <div class="ui checkbox">
+                  <input type="checkbox" name="round" id="round">
+                  <label>Round Trip</label>
+                </div>
+                <div class="three fields">
+                    <div class="field">
+                        <select class="ui disabled dropdown" name="ret[month]" id="retMonth">
+                          <option value="">Month</option>
+                          <option value="1">January</option>
+                          <option value="2">February</option>
+                          <option value="3">March</option>
+                          <option value="4">April</option>
+                          <option value="5">May</option>
+                          <option value="6">June</option>
+                          <option value="7">July</option>
+                          <option value="8">August</option>
+                          <option value="9">September</option>
+                          <option value="10">October</option>
+                          <option value="11">November</option>
+                          <option value="12">December</option>
+                        </select>
+                    </div>
+                  <div class="field">
 
-				</form>
+                    <div class="ui disabled input" id="rD">
+                        <input type="text" name="ret[day]" maxlength="2" placeholder="Day" id="retDay">
+                    </div>
+                  </div>
+                <div class="field">
 
-				</div>
-			</div>
+                  <div class="ui disabled input" class="rettime" id="rY">
+                      <input type="text" name="ret[year]" maxlength="4" placeholder="Year" id="retYear">
+                  </div>
+                </div>
+                <div class="field"></div>
+                </div>
 
-		</div>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script type="text/javascript" src="resources/main.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.js"></script>
-	</body>
+                <div class="ui divider"></div>
+
+                <div class="three fields">
+                    <div class="field">
+                        <div class="ui left icon input">
+                            <input type="text" placeholder="Number of Tickets" name = "num" id="num">
+                            <i class="users icon"></i>
+                        </div>
+                    </div>
+                    <div class="field">
+                        <div class="ui input">
+                            <input type="text" placeholder="Max Transation Time" name = "waiting" id="waiting">
+                        </div>
+                    </div>
+                    <div class="field">
+                        <div class="ui left pointing label">
+                            Please enter the maximun transaction time in hours
+                        </div>
+                    </div>
+                </div>
+                <div class="three fields">
+                    <div class="field">
+                        <div class="ui right pointing label">
+                            Enter your email address for subscription.
+                        </div>
+                    </div>
+                    <div class="field">
+                        <div class="ui left icon input">
+                            <input type="text" name="email" placeholder="E-mail" id="email">
+                            <i class="mail icon"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="four fields">
+
+                </div>
+                <div class="five fields">
+                    <div class="field"></div>
+                    <div class="field"></div>
+                    <div class="field"></div>
+                    <div class="field"></div>
+                    <div class="field">
+                        <a class="ui button" id="sub">Submit</a>
+                    </div>
+                </div>
+            </form>
+
+
+        </div>
+	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.js"></script>
+        <script type="text/javascript" src="resources/main.js"></script>
+    </body>
 </html>
