--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
                 <div class="three fields">
                     <div class="field">
                         <select class="ui disabled dropdown" name="ret[month]" id="retMonth">
-                          <option value="">Month</option>
+                          <option value="" disabled selected>Month</option>
                           <option value="1">January</option>
                           <option value="2">February</option>
                           <option value="3">March</option>
