--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="field">
                         <div class="ui left pointing label">
-                            Please enter the airport code (e.g ALB)
+                            Please enter 3-character city/airport codes, e.g., NYC or LGA.
                         </div>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                     </div>
                     <div class="field">
                         <div class="ui left pointing label">
-                            Please enter the maximun transaction time in hours
+                            Please enter the maximun connecting time in hours.
                         </div>
                     </div>
                 </div>
