add copyright footer

--- a/public/index.html
+++ b/public/index.html
@@ -159,4 +159,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.js"></script>
         <script type="text/javascript" src="resources/main.js"></script>
     </body>
+<div id="footer", style="text-align:center;color:#FFFFFF">
+Copyright © Ying Guo,Yiyan Xu, Xinyue Yan
+</footer>
 </html>
