syntax change in HTML

--- a/public/index.html
+++ b/public/index.html
@@ -153,13 +153,13 @@
                 </div>
             </form>
 
-
+        </div>
+        <div id="footer">
+            <p>Copyright © Ying Guo,Yiyan Xu, Xinyue Yan</p>
         </div>
 	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.js"></script>
         <script type="text/javascript" src="resources/main.js"></script>
     </body>
-<div id="footer", style="text-align:center;color:#FFFFFF">
-Copyright © Ying Guo,Yiyan Xu, Xinyue Yan
-</footer>
+
 </html>
