--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
                     </div>
                     <div class="field">
                         <div class="ui input">
-                            <input type="text" placeholder="Max Transation Time" name = "waiting" id="waiting">
+                            <input type="text" placeholder="Max Connecting Time" name = "waiting" id="waiting">
                         </div>
                     </div>
                     <div class="field">
